--- a/Views/userViews/cart.ejs
+++ b/Views/userViews/cart.ejs
@@ -126,9 +126,10 @@
                     <% } else { %>
                     <center>
                         <div class="col-md-lg-5">
-                            <div class="typography" style="height: 200px; text-align:center;">
+                            <div class="typography" style=" text-align: start; ">
                                 <h1>THERE IS NO ITEMS IN CART</h1>
                             </div>
+                            <img src="../img/empty cart.jpg" alt="" style="height: 400px; width: 100%;">
                         </div>
                     </center>
                     <% } %>
