--- a/Views/adminViews/productManagement.ejs
+++ b/Views/adminViews/productManagement.ejs
@@ -54,6 +54,8 @@
               </tr>
               <% }); %>
             </tbody>
+
+          </div>
           </table>
         </div>                 
       </div>
