--- a/Views/userViews/forgotPasswordNum.ejs
+++ b/Views/userViews/forgotPasswordNum.ejs
@@ -14,7 +14,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>ProGear</title>
+	<title>forgot password(num)</title>
 	<!--CSS============================================= -->
 	<link rel="stylesheet" href="css/linearicons.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
@@ -36,55 +36,50 @@
 
 
 	<!--================Login Box Area =================-->
-	<section class="login_box_area section_gap">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="login_box_img">
-						<img class="img-fluid" src="img/login cover.jpg" alt="">
-						<div class="hover">
-							<h4>New to our website?</h4>
-							<p>There are advances being made in science and technology everyday, and a good example of this is the</p>
-							<a class="primary-btn" href="/signup">Create an Account</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<div class="login_form_inner">
-						<h3>Log in to enter</h3>
-						<form class="row login_form" action="/login" method="POST" id="contactForm" novalidate="novalidate">
-							<div class="col-md-12 form-group">
-								<input type="email" class="form-control" id="email" name="email" placeholder="E-mail" onfocus="this.placeholder = ''" onblur="this.placeholder = 'E-mail'">
-							</div>
-							<div class="col-md-12 form-group">
-								<input type="password" class="form-control" id="password" name="password" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">
-							</div>
-							<div class="col-md-12 form-group">
-							<% if (message) { %>
-								<center>
-								<div class="audun_warn">
-									<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-									<%= message %>
-								</div>
-								</center>
-							<% } %>
-							</div>
+<section class="login_box_area section_gap">
+  <div class="container">
+    <div style="margin-left: 250px; margin-right: 250px;">
+      <div class="login_form_inner">
+        <h3>Enter your Phone Number</h3>
+        <form class="row login_form" action="/forgotPasswordNum" method="POST" id="contactForm" novalidate="novalidate">
+          <div class="col-md-12 form-group">
+            <input type="number" class="form-control" id="number" name="number" placeholder="Phone Number" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Phone Number'">
+          </div>
+          <div class="col-md-12 form-group">
+            <% if (message) { %>
+            <center>
+              <div class="audun_warn">
+                <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+                <%= message %>
+              </div>
+            </center>
+            <% } %>
+          </div>
+          <div class="col-md-12 form-group">
+            <button type="submit" value="submit" class="primary-btn">Submit</button>
+            <%-- <a href="/forgotPasswordNum">Forgot Password?</a> --%>
+          </div>
+        </form>
+        <br><br><br><br>
+      </div>
+    </div>
+  </div>
+</section>
 
-							<div class="col-md-12 form-group">
-								<button type="submit" value="submit" class="primary-btn">Log In</button>
-								<a href="/forgotPasswordNum">Forgot Password?</a>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
 	<!--================End Login Box Area =================-->
 
+
+
+
+
+
+
+
 	<!-- start footer Area -->
-	       <%- include('../layouts/userFooter.ejs') %>
+       <%- include('../layouts/userFooter.ejs') %>
+
 	<!-- End footer Area -->
+
 
 	<script src="js/vendor/jquery-2.2.4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
