eleventh file update

--- a/Views/adminViews/addCategory.ejs
+++ b/Views/adminViews/addCategory.ejs
@@ -20,13 +20,24 @@
             <form class="forms-sample" action="/admin/addCategory" method="POST">
               <div class="form-group">
                 <label for="exampleInputName1">Name</label>
-                <input type="text" class="form-control" id="exampleInputName1" name="name">
+                <input type="text" class="form-control" id="name" name="name">
+                <p id="error1" class="text-danger"></p>
               </div>
               <div class="form-group">
                 <label for="exampleTextarea1">Description</label>
-                <textarea class="form-control" id="exampleTextarea1" rows="4" name="des"></textarea>
+                <textarea class="form-control" id="description" rows="4" name="des"></textarea>
+                <p id="error3" class="text-danger"></p>
               </div>
-              <button type="submit" class="btn btn-primary mr-2">Submit</button>
+              <% if (typeof message !== 'undefined') { %>
+								<center>
+								<div class="audun_warn">
+									<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+									<%= message %>
+								</div>
+								</center>
+							<% } %>
+              
+              <button type="submit" class="btn btn-primary mr-2" onclick="validate()">Submit</button>
               <button class="btn btn-dark">Cancel</button>
             </form>
           </div>
@@ -39,3 +50,76 @@
           <!-- content-wrapper ends -->
           <!-- partial:../../partials/_footer.html -->
           <%- include('../layouts/adminFooter.ejs') %>
+
+
+<script>
+  function validate() {
+
+const name = document.getElementById('name')
+const brand = document.getElementById('brand')
+const description = document.getElementById('description')
+const price = document.getElementById('price')
+const quantity = document.getElementById('quantity')
+const category = document.getElementById('category')
+const subCategory = document.getElementById('sub_category')
+
+const nameValue = name.value.trim()
+const brandValue = brand.value.trim()
+const descriptionValue = description.value.trim()
+const priceValue = price.value.trim()
+const quantityValue = quantity.value.trim()
+const categoryValue = category.value.trim()
+const subCategoryValue = subCategory.value.trim()
+
+const error1 = name.parentElement.querySelector('p')
+const error2 = brand.parentElement.querySelector('p')
+const error3 = description.parentElement.querySelector('p')
+const error4 = price.parentElement.querySelector('p')
+const error5 = quantity.parentElement.querySelector('p')
+const error6 = category.parentElement.querySelector('p')
+const error7 = subCategory.parentElement.querySelector('p')
+
+error1.innerText = ''
+error2.innerText = ''
+error3.innerText = ''
+error4.innerText = ''
+error5.innerText = ''
+error6.innerText = ''
+error7.innerText = ''
+
+let flag = 1
+
+if (nameValue == '') {
+  error1.innerText = "Product Name is required"
+  flag = 2
+}
+if (brandValue == '') {
+  error2.innerText = "Brand Name is required"
+  flag = 2
+}
+if (descriptionValue == '') {
+  error3.innerText = "Description is required"
+  flag = 2
+}
+if (priceValue == '') {
+  error4.innerText = "Price is required"
+  flag = 2
+}
+if (quantityValue == '') {
+  error5.innerText = "Quantity is required"
+  flag = 2
+}
+if (categoryValue == '') {
+  error6.innerText = "Category is required"
+  flag = 2
+}
+if(subCategoryValue == ''){
+  error7.innerText = 'Sub Category is required'
+  flag = 2
+}
+
+if (flag == 1) {
+  document.getElementById('myForm').submit()
+    }
+  }
+</script>
