--- a/Views/adminViews/adminLogin.ejs
+++ b/Views/adminViews/adminLogin.ejs
@@ -1,30 +1,102 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Admin Login</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="style/login.css">	
-</head>
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<title>Corona Admin</title>
+		<!-- plugins:css -->
+		<link rel="stylesheet" href="../../assets/vendors/mdi/css/materialdesignicons.min.css">
+		<link rel="stylesheet" href="../../assets/vendors/css/vendor.bundle.base.css">
+		<!-- endinject -->
+		<!-- Plugin css for this page -->
+		<!-- End plugin css for this page -->
+		<!-- inject:css -->
+		<!-- endinject -->
+		<!-- Layout styles -->
+		<link rel="stylesheet" href="../../assets/css/style.css">
+		<!-- End layout styles -->
+		<link rel="shortcut icon" href="../../assets/images/favicon.png" />
+	  </head>
 
-	<br>
+	 <!-- <br>
 	<br>
 	<br>
 	<div class="container">
 		<div class="row">
 		  <div class="col-md-3"></div>
 		  <div class="col-md-lg-6 main">
-			<!-- {{!-- <img src="img/logo.png" alt="">	 --}} -->
+			
 			<h1 class="logo">Pro<span>Gear</span> </h1>
 			<form action="/admin/login" method="post">
 			  <h1 class="heading">Admin Login</h1><br>
 			  <input class="box" type="text" name="email" id="email" placeholder="E-mail" required /><br>
 			  <input class="box" type="password" name="password" id="password" placeholder="Password" required/><br>																							 -->
-			  <input type="submit" id="submitDetails" value="Submit" /><br>
+			  <!-- <input type="submit" id="submitDetails" value="Submit" /><br>
 			</form>
 		  </div>	
 		  <div class="col-md-3"></div>
 		</div>
 	  </div>	  
-</body>
+</body>  --> 
+
+<body>
+    <div class="container-scroller">
+      <div class="container-fluid page-body-wrapper full-page-wrapper">
+        <div class="row w-100 m-0">
+          <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
+            <div class="card col-lg-4 mx-auto">
+              <div class="card-body px-5 py-5">
+                <h3 class="card-title text-left mb-3">Login</h3>
+                <form  action="/admin/login" method="post" >
+                  <div class="form-group">
+                    <label>Username or email *</label>
+                    <input type="text" name="email" id="email" placeholder="E-mail" required  class="form-control p_input">
+                  </div>
+                  <div class="form-group">
+                    <label>Password *</label>
+                    <input type="password" name="password" id="password" placeholder="Password" required class="form-control p_input">
+                  </div>
+                  <div class="form-group d-flex align-items-center justify-content-between">
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input type="checkbox" class="form-check-input"> Remember me </label>
+                    </div>
+                    <a href="#" class="forgot-pass">Forgot password</a>
+                  </div>
+                  <div class="text-center">
+                    <button type="submit" class="btn btn-primary btn-block enter-btn">Login</button>
+                  </div>
+                  <div class="d-flex">
+                    <button class="btn btn-facebook mr-2 col">
+                      <i class="mdi mdi-facebook"></i> Facebook </button>
+                    <button class="btn btn-google col">
+                      <i class="mdi mdi-google-plus"></i> Google plus </button>
+                  </div>
+                  <p class="sign-up">Don't have an Account?<a href="#"> Sign Up</a></p>
+                </form>
+              </div>
+            </div>
+          </div>
+          <!-- content-wrapper ends -->
+        </div>
+        <!-- row ends -->
+      </div>
+      <!-- page-body-wrapper ends -->
+    </div>
+    <!-- container-scroller -->
+    <!-- plugins:js -->
+    <script src="../../assets/vendors/js/vendor.bundle.base.js"></script>
+    <!-- endinject -->
+    <!-- Plugin js for this page -->
+    <!-- End plugin js for this page -->
+    <!-- inject:js -->
+    <script src="../../assets/js/off-canvas.js"></script>
+    <script src="../../assets/js/hoverable-collapse.js"></script>
+    <script src="../../assets/js/misc.js"></script>
+    <script src="../../assets/js/settings.js"></script>
+    <script src="../../assets/js/todolist.js"></script>
+    <!-- endinject -->
+  </body>
 </html>
