--- a/Views/adminViews/categoryManagement.ejs
+++ b/Views/adminViews/categoryManagement.ejs
@@ -28,7 +28,9 @@
                 <tbody>
                   <% find.forEach((category) => { %>
                   <tr>
+                    <span data-bs-toggle="tooltip" data-bs-placement="top" title="<%= category.description %>" style="display: inline-block; max-width: 200px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
                     <td><%= category.name %></td>
+                  </span>
                     <td>
                       <span data-bs-toggle="tooltip" data-bs-placement="top" title="<%= category.description %>" style="display: inline-block; max-width: 200px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
                         <%= category.description %>
