--- a/Views/userViews/checkout.ejs
+++ b/Views/userViews/checkout.ejs
@@ -31,12 +31,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.js"></script>
-
-
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.js"></script>
 
     <style>
         body.no-scroll {
@@ -290,8 +287,8 @@
     
                             <div class="payment_item">
                                 <div class="radion_btn">
-                                    <input type="radio" id="f-option5" name="payment_method" value="check">
-                                    <label for="f-option5">Check payments</label>
+                                    <input type="radio" id="f-option5" name="payment_method" value="wallet">
+                                    <label for="f-option5">Wallet </label>
                                     <div class="check"></div>
                                 </div>
                             </div>
@@ -299,7 +296,7 @@
                             <div class="payment_item active">
                                 <div class="radion_btn">
                                     <input type="radio" id="f-option6" name="payment_method" value="RazorPay">
-                                    <label for="f-option6">Paypal</label>
+                                    <label for="f-option6">RazorPay</label>
                                     <img src="img/product/card.jpg" alt="">
                                     <div class="check"></div>
                                 </div>
@@ -410,13 +407,9 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
     <script src="js/gmaps.min.js"></script>
     <script src="js/main.js"></script>
-
-
-
-
-
-
-
+    <!-- Razorpay Link -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <!-- Change Default address pop up list -->
     <script>
 
         var popup = document.getElementsByClassName("pop-up-list")[0];
@@ -452,6 +445,7 @@
             form.submit();
         }
     </script>
+    <!-- Add address pop up form -->
     <script>
         // Get references to the elements
         let popupWrappers = document.querySelectorAll(".popup-wrapper");
@@ -509,45 +503,147 @@
             document.body.classList.toggle("no-scroll");
         }
     </script>
-
-
-<!--Onsubmit pop up-->
-
-   <script>
-      function proceedToPayment() {
+    <!--Onsubmit pop up-->
+    <script>
+        function proceedToPayment() {
         event.preventDefault()
-  $.ajax({
-    url: "/checkout",
-    method: 'POST',
-    data: $('#checkOut-form').serialize(),
-    success: (response) => {
-      console.log(response,'+++++=========== ');
-      if (response.error) {
-        console.log(response,'error--------------------------------');
+        $.ajax({
+        url: "/checkout",
+        method: 'POST',
+        data: $('#checkOut-form').serialize(),
+        success: (response) => {
+            console.log(response,'+++++=========== ');
+            if (response.error) {
+            console.log(response,'error--------------------------------');
 
-        console.log(response.error.message,'---------------');
-        Swal.fire({
-          title: 'Error!',
-          text: response.error,
-          icon: 'error',
-          timer: 5000
+            console.log(response.error.message,'---------------');
+            Swal.fire({
+                title: 'Error!',
+                text: response.error,
+                icon: 'error',
+                timer: 5000
+            })
+            } else if (response.orderStatus == true) {
+                console.log("res"+response.orderStatus)
+                console.log(response,'status');
+                Swal.fire({
+                    title: 'Order Placed!',
+                    text: 'Your order has been placed successfully.',
+                    icon: 'success',
+                    showCancelButton: true,
+                    confirmButtonColor: '#e47312',
+                    cancelButtonColor: '#e47312',
+                    confirmButtonText: 'View Order',
+                    cancelButtonText: 'Continue Shopping'
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            location.href = '/order';
+                    } else {
+                        location.href = '/';
+                    }
+                });
+
+            } else if (response.order.status==="created") {
+                console.log("razorpayPayment1");
+                console.log("order response",response.order);
+                          
+
+                razorpayPayment(response.order)
+            }
+        }
         })
-      } else if (response.codStatus == true) {
-        console.log("res"+response.codStatus)
-        console.log(response,'status');
-        Swal.fire({
-          title: 'Order Placed!',
-          text: 'Your order has been placed successfully.',
-          icon: 'success',
-          timer: 5000
-        }).then(() => {
-          location.href = '/'
-        })
-      } 
     }
-})
+    function razorpayPayment(order){
+
+        console.log("rezorpayPayment 2");
+
+
+        var options = {
+        "key": "rzp_test_yeqkJtgBPsd4gA", // Enter the Key ID generated from the Dashboard
+        "amount": order.amount, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+        "currency": "INR",
+        "name": "ProGear",
+        "description": "Test Transaction",
+        "image": "https://example.com/your_logo",
+        "order_id": order.id, //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+        "handler": function (response){
+
+            verifyPayment(response,order)
+            
+        },
+        "prefill": {
+            "name": "Gaurav Kumar",
+            "email": "gaurav.kumar@example.com",
+            "contact": "9000090000"
+        },
+        "notes": {
+            "address": "Razorpay Corporate Office"
+        },
+        "theme": {
+            "color": "#3399cc"
+        }
+        };
+
+        var rzp1 = new Razorpay(options);
+        rzp1.open();
+
 }
-</script>
+     function verifyPayment(payment, order){
+        $.ajax({
+            url : '/verifyRazorpayPayment',
+            data : {
+                payment,
+                order
+            },
+            method : 'post',
+            success:(response)=>{
+                if(response.status =='Success'){
+                    Swal.fire({
+                        title: 'Order Placed!',
+                        text: 'Your order has been placed successfully.',
+                        icon: 'success',
+                        showCancelButton: true,
+                        confirmButtonColor: '#e47312',
+                        cancelButtonColor: '#e47312',
+                        confirmButtonText: 'View Order',
+                        cancelButtonText: 'Continue Shopping'
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                location.href = '/order';
+                        } else {
+                            location.href = '/';
+                        }
+                    });
+                }else if(response.status =='Failed'){
+                    Swal.fire({
+                        title: 'Order failed!',
+                        text: 'Your order has been placed successfully.',
+                        icon: 'success',
+                        showCancelButton: true,
+                        confirmButtonColor: '#e47312',
+                        cancelButtonColor: '#e47312',
+                        confirmButtonText: 'View Order',
+                        cancelButtonText: 'Continue Shopping'
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                location.href = '/order';
+                        } else {
+                            location.href = '/';
+                        }
+                    });
+                }
+                else{
+                    Swal.fire({
+                        title: 'Error!',
+                        text: response.error,
+                        icon: 'error',
+                        timer: 5000
+                    })
+                }
+            }
+        })
+     }
+    </script>
 </body>
 
 </html>
