--- a/Views/userViews/profile.ejs
+++ b/Views/userViews/profile.ejs
@@ -67,6 +67,7 @@
                                     <h1><%= user.fname %> <%= user.lname %></h1>
                                     <p><%= user.email %></p>
                                     <p>+91 <%= user.number %></p>
+                                    <p><span style="color: darkgoldenrod;">Wallet : </span>₹<%= user.wallet %></p>
                                 </div>
                                 <br>
                                 <div class="col-xs-12">
