--- a/Views/userViews/signupOtp.ejs
+++ b/Views/userViews/signupOtp.ejs
@@ -14,7 +14,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>ProGear</title>
+	<title>forgot password(num)</title>
 	<!--CSS============================================= -->
 	<link rel="stylesheet" href="css/linearicons.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
@@ -30,53 +30,36 @@
 	<header class="header_area sticky-header">
 	</header>
 
-
-
-
-
-
 	<!--================Login Box Area =================-->
 	<section class="login_box_area section_gap">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="login_box_img">
-						<img class="img-fluid" src="img/login cover.jpg" alt="">
-						<div class="hover">
-							<h4>New to our website?</h4>
-							<p>There are advances being made in science and technology everyday, and a good example of this is the</p>
-							<a class="primary-btn" href="/signup">Create an Account</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<div class="login_form_inner">
-						<h3>Log in to enter</h3>
-						<form class="row login_form" action="/login" method="POST" id="contactForm" novalidate="novalidate">
+			<div style="margin-left: 250px; margin-right: 250px;">
+					<div class="login_form_inner ">
+						<h3>Enter OTP</h3>
+						<form class="row login_form" action="/signupOtpVerify" method="POST" id="contactForm" novalidate="novalidate">
 							<div class="col-md-12 form-group">
-								<input type="email" class="form-control" id="email" name="email" placeholder="E-mail" onfocus="this.placeholder = ''" onblur="this.placeholder = 'E-mail'">
+								<input type="text" class="form-control" id="otp" name="otp" placeholder="OTP" onfocus="this.placeholder = ''" onblur="this.placeholder = 'OTP'">
 							</div>
 							<div class="col-md-12 form-group">
-								<input type="password" class="form-control" id="password" name="password" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">
-							</div>
-							<div class="col-md-12 form-group">
-							<% if (message) { %>
+								{<% if (typeof message !== 'undefined') { %>
 								<center>
 								<div class="audun_warn">
 									<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
 									<%= message %>
 								</div>
 								</center>
-							<% } %>
-							</div>
-
+								<% } %>
+							</div> 
 							<div class="col-md-12 form-group">
-								<button type="submit" value="submit" class="primary-btn">Log In</button>
-								<a href="/forgotPasswordNum">Forgot Password?</a>
+								<button type="submit" value="submit" class="primary-btn">Sumbit</button>
+							</div>
+							<div class="col-md-12 form-group" id="countdown"></div>
+							<div class="col-md-12 form-group">
+								<a href="/resendSignupOtp"  id="resendLink" >Resend OTP</a>
 							</div>
 						</form>
+						<br><br><br>
 					</div>
-				</div>
 			</div>
 		</div>
 	</section>
@@ -85,6 +68,7 @@
 	<!-- start footer Area -->
 	       <%- include('../layouts/userFooter.ejs') %>
 	<!-- End footer Area -->
+
 
 	<script src="js/vendor/jquery-2.2.4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
@@ -100,6 +84,31 @@
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
 	<script src="js/gmaps.min.js"></script>
 	<script src="js/main.js"></script>
+
+	<script>
+        var timeLeft = 5; // Set the countdown time in seconds
+
+        function startCountdown() {
+            var countdownElement = document.getElementById('countdown');
+            var resendLink = document.getElementById('resendLink');
+
+            countdownElement.style.display = 'inline';
+            resendLink.style.display = 'none';
+
+            var countdownInterval = setInterval(function() {
+                timeLeft--;
+                countdownElement.textContent = 'Resend OTP in ' + timeLeft + ' seconds';
+
+                if (timeLeft <= 0) {
+                    clearInterval(countdownInterval);
+                    countdownElement.style.display = 'none';
+                    resendLink.style.display = 'inline';
+                }
+            }, 1000);
+        }
+        startCountdown()
+    </script>
+
 </body>
 
 </html>
